# SHIORI-BE

./: .gitignore  Makefile  README.md  database_models.py  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  feature.yml
.github/workflows/: auto-pr-settings.yaml
docker/dev/: Dockerfile.worker  docker-compose.yml
docker/dev/mongo/: mongod.conf
docker/dev/redis/: redis.conf
migrations/: env.py
migrations/versions/: 0fe81d34ba6c_add_is_admin_in_user.py  3edd66ab9dfe_add_unique_index.py  75b6168e2899_drop_diary_meta_table.py  75e27cc6ff50_create_reflection_table.py  96aca6ad2b8f_create_user_table.py  97a63821c920_create_tag_table.py  c2b3de753a44_create_diary_meta_table.py  edb53e81a0e4_create_user_table.py  ff7bfb81960a_create_user_table.py
scripts/: seed_diary.py
src/shiori/: main.py
src/shiori/app/: container.py  server.py
src/shiori/app/auth/application/: jwt.py
src/shiori/app/celery/: __init__.py  celery_app.py
src/shiori/app/celery/tasks/: __init__.py  summary_task.py
src/shiori/app/core/: config.py
src/shiori/app/core/database/: __init__.py  mongo_session.py  mongo_transactional.py  session.py  transactional.py
src/shiori/app/core/dependencies/: __init__.py  (+1 more)
src/shiori/app/user/: container.py
src/shiori/app/utils/: __init__.py  get_root_path.py  log_utils.py
tests/: conftest.py
tests/app/auth/application/: test_jwt.py
tests/app/diary/infra/: test_emotion_model.py
tests/support/: test_db_coordinator.py  test_mongo_coordinator.py
tests/utils/: test_token.py
(+124 files in other folders)
