[project]
name = "shiori"
version = "0.1.0"
description = "개인 일지 작성 및 AI 요약 서비스"
authors = [
    { name = "Jungyu Kim", email = "jungyu3826@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.25,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "click (>=8.2.1,<9.0.0)",
    "dependency-injector (>=4.47.1,<5.0.0)",
    "alembic (==1.13.1)",
    "pydantic-settings (==2.1.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (<4.0.0)"
]

[tool.poetry]
packages = [{ include = "shiori", from = "src" }]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
black = "^25.1.0"
pytest-asyncio = "^1.0.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

